idf_component_register(
    SRCS
        "can_state.c"
        "can_driver.c"
        "can_manager.c"
        "can_selftest.c"
        "can_logger.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_driver_twai
        freertos
        log
        driver
        esp_driver_sdmmc
        esp_driver_sdspi
        fatfs
)
